# open-stock-data

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  update-bars-cn.yml  update-bars-hk.yml  update-bars-us.yml  update-symbols.yml
scripts/: backfill.py  fetch_bars_cn.py  fetch_bars_hk.py  fetch_bars_us.py  fetch_symbols_bse.py  fetch_symbols_hkex.py  fetch_symbols_nasdaq.py  fetch_symbols_sse.py  fetch_symbols_szse.py
scripts/utils/: parquet_io.py  release_upload.py  trading_calendar.py
symbols/: AMEX.csv  BSE.csv  HKEX.csv  NASDAQ.csv  NYSE.csv  SSE.csv  SZSE.csv
tests/: test_backfill.py  test_fetch_bars_cn.py  test_fetch_bars_hk.py  test_fetch_bars_us.py  test_fetch_symbols_bse.py  test_fetch_symbols_hkex.py  test_fetch_symbols_nasdaq.py  test_fetch_symbols_sse.py  test_fetch_symbols_szse.py  test_parquet_io.py  test_release_upload.py  test_symbols_schema.py  test_trading_calendar.py
